--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         padding: 0;
       }
       .section1 {
-        background-image: url("./img/Background\ Image\ \(Low\ Stock\ Alert\).png");
+        background-image: url("http://drive.google.com/uc?export=view&id=1GM6E-xijWXdWiM4x5jvCUBq7aVPdOZPJ");
         color: #ffffff;
       }
       .section2 td {
@@ -58,7 +58,7 @@
       }
       .section3 td {
         text-align: center;
-        background-image: url("./img/Call\ To\ Action\ BG\ Image\(Low\ Stock\ Alert\).png");
+        background-image: url("http://drive.google.com/uc?export=view&id=1nZkaygzUgDkh0SyX1Ox-S3yoel_a15Tf");
         background-size: cover;
         color: #ffffff;
       }
@@ -407,7 +407,7 @@
                               text-align: center;
                             "
                           >
-                            <a href="#" style="">Support</a>
+                            <a href="#" >Support</a>
                           </p>
                         </td>
                       </tr>
@@ -420,7 +420,7 @@
                               <td
                                 style="padding: 64px 0px 0px; font-weight: 400"
                               >
-                                <img src="./img/Profile.png" alt="" />
+                                <img src="http://drive.google.com/uc?export=view&id=156yv4HzgonnpQZuSunxOrSlQ1XQUOEQq" alt="" />
                                 <p
                                   style="
                                     font-size: 14px;
@@ -506,7 +506,7 @@
                         <a href="#">
                           <img
                             style="margin-bottom: 21px"
-                            src="./img/bw-Vector.png"
+                            src="http://drive.google.com/uc?export=view&id=1G9bvSJHIZtHgahzw_la-zI5rWPQmff1_"
                             alt="esemie"
                           />
                         </a>
@@ -516,14 +516,24 @@
                   <table>
                     <tr>
                       <td class="link2" style="padding: 0px">
-                        <a href="#"> <img src="./img/fb.png" alt="" /></a>
+                        <a href="#">
+                          <img
+                            src="http://drive.google.com/uc?export=view&id=1EXIjMK-NpBuc_QrYfXwIDM2vSh-FF56E"
+                            alt=""
+                        /></a>
                         <a
                           href="#"
                           style="display: inline-block; margin: 0px 32px"
                         >
-                          <img src="./img/Twitter.png" alt=""
+                          <img
+                            src="http://drive.google.com/uc?export=view&id=1LCgPd8IwWYQG8bfZASm0cojy6WuvcYGh"
+                            alt=""
                         /></a>
-                        <a href="#"><img src="./img/Instagram.png" alt="" /></a>
+                        <a href="#"
+                          ><img
+                            src="http://drive.google.com/uc?export=view&id=1geRgmgqhBpQtkidRmlp4ZD6WocNp1FXV"
+                            alt=""
+                        /></a>
                       </td>
                     </tr>
                   </table>
